# serializer version: 1
# name: test_shipped_planner_page_tree[158x210-mos-left]
  list([
    dict({
      'name': 'cover',
      'pages': 1,
    }),
    dict({
      'name': 'index',
      'pages': 1,
    }),
    dict({
      'name': 'annual',
      'pages': 1,
    }),
    dict({
      'name': 'quarterly',
      'pages': 4,
    }),
    dict({
      'name': 'monthly',
      'pages': 12,
    }),
    dict({
      'name': 'weekly',
      'pages': 53,
    }),
    dict({
      'name': 'daily',
      'pages': 365,
    }),
    dict({
      'name': 'daily_notes',
      'pages': 730,
    }),
    dict({
      'name': 'colophon',
      'pages': 1,
    }),
  ])
# ---
# name: test_shipped_planner_page_tree[supernote-nomad]
  list([
    dict({
      'name': 'cover',
      'pages': 1,
    }),
    dict({
      'name': 'index',
      'pages': 1,
    }),
    dict({
      'name': 'annual',
      'pages': 1,
    }),
    dict({
      'name': 'quarterly',
      'pages': 4,
    }),
    dict({
      'name': 'monthly',
      'pages': 12,
    }),
    dict({
      'name': 'weekly',
      'pages': 53,
    }),
    dict({
      'name': 'daily',
      'pages': 365,
    }),
    dict({
      'name': 'daily_notes',
      'pages': 730,
    }),
    dict({
      'name': 'projects',
      'pages': 17,
    }),
    dict({
      'name': 'habits',
      'pages': 13,
    }),
    dict({
      'name': 'review',
      'pages': 57,
    }),
    dict({
      'name': 'tasks',
      'pages': 57,
    }),
    dict({
      'name': 'meetings',
      'pages': 17,
    }),
    dict({
      'name': 'colophon',
      'pages': 1,
    }),
  ])
# ---
# name: test_short_january_critical_pages[158x210-mos-left]
  dict({
    'annual': '''
      #mos_frame(
        left,
        rotate(
          270deg,
          origin: center + horizon,
          reflow: true,
      
          table(
            columns: (3fr, 1fr),
            rows: 1fr,
            inset: 0pt,
            column-gutter: regular_column_gutter,
            stroke: 0pt,
      
            table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<month-2026-01-01>)[Jan]])
      ),
      table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<quarter-2026-1>)[Q1]])
      )
          )
        ),
        well_frame(
          trail_heading(text(size: h1)[2026<annual>], padded_link(padding: 0pt, <index>, contents_bars(size: h1)), spacing: 1fr, direction: ltr),
          grid(
        columns: (1fr, 1fr, 1fr),
        rows: (1fr),
        column-gutter: regular_column_gutter,
        row-gutter: 5pt,
      
        grid(
        align: center + horizon,
        inset: 5pt,
        stroke: (x, _) => if x == 1 {( left: regular_stroke + black )},
        columns: (1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr),
        rows: 1fr,
      
        grid.cell(
          colspan: 8,
          [January]
        ),
        grid.hline(stroke: regular_stroke + black),
      
        [], [M], [T], [W], [T], [F], [S], [S], grid.hline(stroke: regular_stroke + black),
        padded_link(<2026W01>)[1], [], [], [], padded_link(<2026-01-01>)[1], padded_link(<2026-01-02>)[2], padded_link(<2026-01-03>)[3], padded_link(<2026-01-04>)[4],
      padded_link(<2026W02>)[2], padded_link(<2026-01-05>)[5], padded_link(<2026-01-06>)[6], padded_link(<2026-01-07>)[7], padded_link(<2026-01-08>)[8], padded_link(<2026-01-09>)[9], padded_link(<2026-01-10>)[10], padded_link(<2026-01-11>)[11],
      padded_link(<2026W03>)[3], padded_link(<2026-01-12>)[12], padded_link(<2026-01-13>)[13], padded_link(<2026-01-14>)[14], [15], [16], [17], [18],
      padded_link(<2026W04>)[4], [19], [20], [21], [22], [23], [24], [25],
      padded_link(<2026W05>)[5], [26], [27], [28], [29], [30], [31], []
      )
      ),
        ),
      )
    ''',
    'colophon': '''
      #block[
        #set par(spacing: 0em)
        #lead_pair(padded_link(padding: 0pt, <index>, contents_bars(size: h1)), text(size: h1, weight: "bold")[About this notebook <colophon>], spacing: 0.5em)
        #v(1em)
        #context grid(
          columns: (measure(text(weight: "bold")[Version]).width, 1fr),
          column-gutter: regular_column_gutter,
          rows: regular_height,
          align: horizon,
            [*Device*], [158 × 210],
            [*Year*], padded_link(<annual>)[2026],
            [*Version*], [VERSION],
        )
      ]
    ''',
    'daily': '''
      #mos_frame(
        left,
        rotate(
          270deg,
          origin: center + horizon,
          reflow: true,
      
          table(
            columns: (3fr, 1fr),
            rows: 1fr,
            inset: 0pt,
            column-gutter: regular_column_gutter,
            stroke: 0pt,
      
            table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell(fill: black, text(white)[#padded_link(<month-2026-01-01>)[Jan]])
      ),
      table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<quarter-2026-1>)[Q1]])
      )
          )
        ),
        well_frame(
          trail_heading(grid(
        columns: (auto, auto),
        rows: (3fr, 2fr),
        column-gutter: regular_column_gutter,
        
        grid.cell(
          rowspan: 2,
          align: center + horizon,
          rect(
            stroke: (right: regular_stroke),
      
            text(size: h1)[1 <2026-01-01>]
          )
        ),
        [*Thursday*],
        padded_link(<2026W01>)[Week 1]
      ), padded_link(padding: 0pt, <index>, contents_bars(size: h1)), spacing: 1fr, direction: ltr),
          grid(
        columns: (3fr, 5fr),
        rows: 1fr,
        column-gutter: regular_column_gutter,
      
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        row-gutter: 5mm,
        grid(
        columns: 1fr,
        inset: 0mm,
        grid.cell(
          stroke: (bottom: regular_stroke + black),
          box(height: regular_height, align(horizon, [Schedule]))
        ),
        grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [ 8]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [ 9]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [10]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [11]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [12]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [13]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [14]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [15]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [16]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [17]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [18]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [19]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [20]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
        box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black)))
      ),
      grid(
        align: center + horizon,
        inset: 5pt,
        stroke: (x, _) => if x == 1 {( left: regular_stroke + black )},
        columns: (1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr),
        rows: 1fr,
      
        
        [], [M], [T], [W], [T], [F], [S], [S], grid.hline(stroke: regular_stroke + black),
        padded_link(<2026W01>)[1], [], [], [], grid.cell(fill: black, text(white, padded_link(<2026-01-01>)[1])), padded_link(<2026-01-02>)[2], padded_link(<2026-01-03>)[3], padded_link(<2026-01-04>)[4],
      padded_link(<2026W02>)[2], padded_link(<2026-01-05>)[5], padded_link(<2026-01-06>)[6], padded_link(<2026-01-07>)[7], padded_link(<2026-01-08>)[8], padded_link(<2026-01-09>)[9], padded_link(<2026-01-10>)[10], padded_link(<2026-01-11>)[11],
      padded_link(<2026W03>)[3], padded_link(<2026-01-12>)[12], padded_link(<2026-01-13>)[13], padded_link(<2026-01-14>)[14], [15], [16], [17], [18],
      padded_link(<2026W04>)[4], [19], [20], [21], [22], [23], [24], [25],
      padded_link(<2026W05>)[5], [26], [27], [28], [29], [30], [31], []
      )
      ),
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        row-gutter: 5mm,
        grid(
        columns: 1fr,
        inset: 0mm,
        stroke: (_, _) => (bottom: regular_stroke + black),
      
        grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [Priorities]))),
        box(height: regular_height, align(horizon, [$square.stroked$])),
      box(height: regular_height, align(horizon, [$square.stroked$])),
      box(height: regular_height, align(horizon, [$square.stroked$])),
      box(height: regular_height, align(horizon, [$square.stroked$])),
      box(height: regular_height, align(horizon, [$square.stroked$]))
      ),
      grid(
        columns: (1fr, auto),
        rows: (5mm, 1fr),
        grid.cell(align: horizon, stroke: (bottom: regular_stroke + black), [Notes]),
        grid.cell(align: horizon + right, stroke: (bottom: regular_stroke + black), padded_link(<daily-note-2026-01-01-page-1>)[More]),
        grid.cell(colspan: 2, rect_pattern(dotted))
      )
      )
      ),
        ),
      )
    ''',
    'monthly': '''
      #mos_frame(
        left,
        rotate(
          270deg,
          origin: center + horizon,
          reflow: true,
      
          table(
            columns: (3fr, 1fr),
            rows: 1fr,
            inset: 0pt,
            column-gutter: regular_column_gutter,
            stroke: 0pt,
      
            table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell(fill: black, text(white)[#padded_link(<month-2026-01-01>)[Jan]])
      ),
      table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<quarter-2026-1>)[Q1]])
      )
          )
        ),
        well_frame(
          lead_pair(padded_link(<index>, contents_bars(size: h1)), text(size: h1)[January<month-2026-01-01>]),
          grid(
        columns: 1fr,
        rows: (auto, auto, 1fr),
      
        grid(
          stroke: regular_stroke,
          columns: (regular_height, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr),
          rows: (regular_height, 2.5cm, 2.5cm, 2.5cm, 2.5cm, 2.5cm),
      
          [], align(center + horizon)[Monday], align(center + horizon)[Tuesday], align(center + horizon)[Wednesday], align(center + horizon)[Thursday], align(center + horizon)[Friday], align(center + horizon)[Saturday], align(center + horizon)[Sunday],
          align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W01>)[1]]), [], [], [], grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-01>)[1]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-02>)[2]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-03>)[3]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-04>)[4]]),
      align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W02>)[2]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-05>)[5]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-06>)[6]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-07>)[7]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-08>)[8]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-09>)[9]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-10>)[10]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-11>)[11]]),
      align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W03>)[3]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-12>)[12]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-13>)[13]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-14>)[14]]), grid.cell(align: top + left, inset: 3pt, [#[15]]), grid.cell(align: top + left, inset: 3pt, [#[16]]), grid.cell(align: top + left, inset: 3pt, [#[17]]), grid.cell(align: top + left, inset: 3pt, [#[18]]),
      align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W04>)[4]]), grid.cell(align: top + left, inset: 3pt, [#[19]]), grid.cell(align: top + left, inset: 3pt, [#[20]]), grid.cell(align: top + left, inset: 3pt, [#[21]]), grid.cell(align: top + left, inset: 3pt, [#[22]]), grid.cell(align: top + left, inset: 3pt, [#[23]]), grid.cell(align: top + left, inset: 3pt, [#[24]]), grid.cell(align: top + left, inset: 3pt, [#[25]]),
      align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W05>)[5]]), grid.cell(align: top + left, inset: 3pt, [#[26]]), grid.cell(align: top + left, inset: 3pt, [#[27]]), grid.cell(align: top + left, inset: 3pt, [#[28]]), grid.cell(align: top + left, inset: 3pt, [#[29]]), grid.cell(align: top + left, inset: 3pt, [#[30]]), grid.cell(align: top + left, inset: 3pt, [#[31]]), []
        ),
        grid.hline(stroke: regular_stroke + black),
        rect_pattern(dotted)
      ),
        ),
      )
    ''',
    'preamble': '''
      #set page(
        width: 158mm,
        height: 210mm,
      
        margin: (
          top: 5mm,
          right: 5mm,
          bottom: 0mm,
          left: 0mm,
        )
      )
      
      #set text(
        size: 10pt
      )
      
      #let regular_stroke = 0.4pt
      #let thick_stroke = 0.8pt
      #let regular_height = 5mm
      #let regular_column_gutter = 10pt
      
      #let h1 = 10mm
      #let link_padding = 8pt
      
      #import "house.typ": dotted, lined, rect_pattern, dotted_centered, rect_pattern_centered, padded_link, contents_bars, lead_pair, trail_heading, mos_frame, well_frame
      
      #let dotted = dotted(regular_height: regular_height)
      #let lined = lined(regular_height: regular_height, regular_stroke: regular_stroke)
      #let rect_pattern = rect_pattern.with(regular_height: regular_height)
      #let dotted_centered = dotted_centered(regular_height: regular_height)
      #let rect_pattern_centered = rect_pattern_centered.with(regular_height: regular_height)
      #let scratch_pad = rect_pattern(dotted)
      #let padded_link = padded_link.with(padding: link_padding)
      #let contents_bars = contents_bars.with(thick_stroke: thick_stroke)
      #let mos_frame = mos_frame.with(mos-width: 10mm, column-gutter: 2mm)
      #let well_frame = well_frame.with(heading-height: 10mm, row-gutter: 2mm)
    ''',
    'weekly': '''
      #mos_frame(
        left,
        rotate(
          270deg,
          origin: center + horizon,
          reflow: true,
      
          table(
            columns: (3fr, 1fr),
            rows: 1fr,
            inset: 0pt,
            column-gutter: regular_column_gutter,
            stroke: 0pt,
      
            table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell(fill: black, text(white)[#padded_link(<month-2026-01-01>)[Jan]])
      ),
      table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<quarter-2026-1>)[Q1]])
      )
          )
        ),
        well_frame(
          lead_pair(padded_link(<index>, contents_bars(size: h1)), text(size: h1)[Week 1 <2026W01> #h(0.6em) Dec 29 – Jan 4]),
          grid(
        columns: (1fr, 1fr, 1fr),
        rows: (1fr, 1fr, 1fr),
        column-gutter: 5pt,
      
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", [Monday 29])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", [Tuesday 30])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", [Wednesday 31])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ),
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", padded_link(<2026-01-01>)[Thursday 1])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", padded_link(<2026-01-02>)[Friday 2])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", padded_link(<2026-01-03>)[Saturday 3])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ),
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", padded_link(<2026-01-04>)[Sunday 4])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid.cell(colspan: 2, grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", [Notes])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ))
      ),
        ),
      )
    ''',
  })
# ---
# name: test_short_january_critical_pages[supernote-nomad]
  dict({
    'annual': '''
      #mos_frame(
        left,
        rotate(
          270deg,
          origin: center + horizon,
          reflow: true,
      
          table(
            columns: (3fr, 1fr),
            rows: 1fr,
            inset: 0pt,
            column-gutter: regular_column_gutter,
            stroke: 0pt,
      
            table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<month-2026-01-01>)[Jan]])
      ),
      table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<quarter-2026-1>)[Q1]])
      )
          )
        ),
        well_frame(
          trail_heading(text(size: h1)[2026<annual>], padded_link(padding: 0pt, <index>, contents_bars(size: h1)), spacing: 1fr, direction: ltr),
          grid(
        columns: (1fr, 1fr, 1fr),
        rows: (1fr),
        column-gutter: regular_column_gutter,
        row-gutter: 4pt,
      
        grid(
        align: center + horizon,
        inset: 3pt,
        stroke: (x, _) => if x == 1 {( left: regular_stroke + black )},
        columns: (1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr),
        rows: 1fr,
      
        grid.cell(
          colspan: 8,
          [January]
        ),
        grid.hline(stroke: regular_stroke + black),
      
        [], [M], [T], [W], [T], [F], [S], [S], grid.hline(stroke: regular_stroke + black),
        padded_link(<2026W01>)[1], [], [], [], padded_link(<2026-01-01>)[1], padded_link(<2026-01-02>)[2], padded_link(<2026-01-03>)[3], padded_link(<2026-01-04>)[4],
      padded_link(<2026W02>)[2], padded_link(<2026-01-05>)[5], padded_link(<2026-01-06>)[6], padded_link(<2026-01-07>)[7], padded_link(<2026-01-08>)[8], padded_link(<2026-01-09>)[9], padded_link(<2026-01-10>)[10], padded_link(<2026-01-11>)[11],
      padded_link(<2026W03>)[3], padded_link(<2026-01-12>)[12], padded_link(<2026-01-13>)[13], padded_link(<2026-01-14>)[14], [15], [16], [17], [18],
      padded_link(<2026W04>)[4], [19], [20], [21], [22], [23], [24], [25],
      padded_link(<2026W05>)[5], [26], [27], [28], [29], [30], [31], []
      )
      ),
        ),
      )
    ''',
    'colophon': '''
      #block[
        #set par(spacing: 0em)
        #lead_pair(padded_link(padding: 0pt, <index>, contents_bars(size: h1)), text(size: h1, weight: "bold")[About this notebook <colophon>], spacing: 0.5em)
        #v(1em)
        #context grid(
          columns: (measure(text(weight: "bold")[Version]).width, 1fr),
          column-gutter: regular_column_gutter,
          rows: regular_height,
          align: horizon,
            [*Device*], [SuperNote Nomad],
            [*Year*], padded_link(<annual>)[2026],
            [*Version*], [VERSION],
        )
      ]
    ''',
    'daily': '''
      #mos_frame(
        left,
        rotate(
          270deg,
          origin: center + horizon,
          reflow: true,
      
          table(
            columns: (3fr, 1fr),
            rows: 1fr,
            inset: 0pt,
            column-gutter: regular_column_gutter,
            stroke: 0pt,
      
            table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell(fill: black, text(white)[#padded_link(<month-2026-01-01>)[Jan]])
      ),
      table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<quarter-2026-1>)[Q1]])
      )
          )
        ),
        well_frame(
          trail_heading(grid(
        columns: (auto, auto),
        rows: (3fr, 2fr),
        column-gutter: regular_column_gutter,
        
        grid.cell(
          rowspan: 2,
          align: center + horizon,
          rect(
            stroke: (right: regular_stroke),
      
            text(size: h1)[1 <2026-01-01>]
          )
        ),
        [*Thursday*],
        padded_link(<2026W01>)[Week 1]
      ), padded_link(padding: 0pt, <index>, contents_bars(size: h1)), spacing: 1fr, direction: ltr),
          grid(
        columns: (3fr, 5fr),
        rows: 1fr,
        column-gutter: regular_column_gutter,
      
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        row-gutter: 4mm,
        grid(
        columns: 1fr,
        inset: 0mm,
        grid.cell(
          stroke: (bottom: regular_stroke + black),
          box(height: regular_height, align(horizon, [Schedule]))
        ),
        grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [ 8]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [ 9]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [10]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [11]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [12]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [13]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [14]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [15]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [16]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [17]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [18]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [19]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
      grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [20]))), box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black))),
        box(height: regular_height, place(bottom + left, line(length: 3mm, stroke: regular_stroke + black)))
      ),
      grid(
        align: center + horizon,
        inset: 3pt,
        stroke: (x, _) => if x == 1 {( left: regular_stroke + black )},
        columns: (1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr),
        rows: 1fr,
      
        
        [], [M], [T], [W], [T], [F], [S], [S], grid.hline(stroke: regular_stroke + black),
        padded_link(<2026W01>)[1], [], [], [], grid.cell(fill: black, text(white, padded_link(<2026-01-01>)[1])), padded_link(<2026-01-02>)[2], padded_link(<2026-01-03>)[3], padded_link(<2026-01-04>)[4],
      padded_link(<2026W02>)[2], padded_link(<2026-01-05>)[5], padded_link(<2026-01-06>)[6], padded_link(<2026-01-07>)[7], padded_link(<2026-01-08>)[8], padded_link(<2026-01-09>)[9], padded_link(<2026-01-10>)[10], padded_link(<2026-01-11>)[11],
      padded_link(<2026W03>)[3], padded_link(<2026-01-12>)[12], padded_link(<2026-01-13>)[13], padded_link(<2026-01-14>)[14], [15], [16], [17], [18],
      padded_link(<2026W04>)[4], [19], [20], [21], [22], [23], [24], [25],
      padded_link(<2026W05>)[5], [26], [27], [28], [29], [30], [31], []
      )
      ),
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        row-gutter: 4mm,
        grid(
        columns: 1fr,
        inset: 0mm,
        stroke: (_, _) => (bottom: regular_stroke + black),
      
        grid.cell(stroke: (bottom: regular_stroke + black), box(height: regular_height, align(horizon, [Priorities]))),
        box(height: regular_height, align(horizon, [$square.stroked$])),
      box(height: regular_height, align(horizon, [$square.stroked$])),
      box(height: regular_height, align(horizon, [$square.stroked$])),
      box(height: regular_height, align(horizon, [$square.stroked$])),
      box(height: regular_height, align(horizon, [$square.stroked$]))
      ),
      grid(
        columns: (1fr, auto),
        rows: (4mm, 1fr),
        grid.cell(align: horizon, stroke: (bottom: regular_stroke + black), [Notes]),
        grid.cell(align: horizon + right, stroke: (bottom: regular_stroke + black), padded_link(<daily-note-2026-01-01-page-1>)[More]),
        grid.cell(colspan: 2, rect_pattern(dotted))
      )
      )
      ),
        ),
      )
    ''',
    'monthly': '''
      #mos_frame(
        left,
        rotate(
          270deg,
          origin: center + horizon,
          reflow: true,
      
          table(
            columns: (3fr, 1fr),
            rows: 1fr,
            inset: 0pt,
            column-gutter: regular_column_gutter,
            stroke: 0pt,
      
            table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell(fill: black, text(white)[#padded_link(<month-2026-01-01>)[Jan]])
      ),
      table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<quarter-2026-1>)[Q1]])
      )
          )
        ),
        well_frame(
          lead_pair(padded_link(<index>, contents_bars(size: h1)), text(size: h1)[January<month-2026-01-01>]),
          grid(
        columns: 1fr,
        rows: (auto, auto, 1fr),
      
        grid(
          stroke: regular_stroke,
          columns: (regular_height, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr),
          rows: (regular_height, 16mm, 16mm, 16mm, 16mm, 16mm),
      
          [], align(center + horizon)[Monday], align(center + horizon)[Tuesday], align(center + horizon)[Wednesday], align(center + horizon)[Thursday], align(center + horizon)[Friday], align(center + horizon)[Saturday], align(center + horizon)[Sunday],
          align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W01>)[1]]), [], [], [], grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-01>)[1]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-02>)[2]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-03>)[3]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-04>)[4]]),
      align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W02>)[2]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-05>)[5]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-06>)[6]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-07>)[7]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-08>)[8]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-09>)[9]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-10>)[10]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-11>)[11]]),
      align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W03>)[3]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-12>)[12]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-13>)[13]]), grid.cell(align: top + left, inset: 3pt, [#padded_link(<2026-01-14>)[14]]), grid.cell(align: top + left, inset: 3pt, [#[15]]), grid.cell(align: top + left, inset: 3pt, [#[16]]), grid.cell(align: top + left, inset: 3pt, [#[17]]), grid.cell(align: top + left, inset: 3pt, [#[18]]),
      align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W04>)[4]]), grid.cell(align: top + left, inset: 3pt, [#[19]]), grid.cell(align: top + left, inset: 3pt, [#[20]]), grid.cell(align: top + left, inset: 3pt, [#[21]]), grid.cell(align: top + left, inset: 3pt, [#[22]]), grid.cell(align: top + left, inset: 3pt, [#[23]]), grid.cell(align: top + left, inset: 3pt, [#[24]]), grid.cell(align: top + left, inset: 3pt, [#[25]]),
      align(center + horizon, rotate(90deg, reflow: true)[#padded_link(<2026W05>)[5]]), grid.cell(align: top + left, inset: 3pt, [#[26]]), grid.cell(align: top + left, inset: 3pt, [#[27]]), grid.cell(align: top + left, inset: 3pt, [#[28]]), grid.cell(align: top + left, inset: 3pt, [#[29]]), grid.cell(align: top + left, inset: 3pt, [#[30]]), grid.cell(align: top + left, inset: 3pt, [#[31]]), []
        ),
        grid.hline(stroke: regular_stroke + black),
        rect_pattern(dotted)
      ),
        ),
      )
    ''',
    'preamble': '''
      #set page(
        width: 118.87mm,
        height: 158.5mm,
      
        margin: (
          top: 8mm,
          right: 4mm,
          bottom: 0mm,
          left: 0mm,
        )
      )
      
      #set text(
        size: 8pt
      )
      
      #let regular_stroke = 0.3pt
      #let thick_stroke = 0.6pt
      #let regular_height = 4mm
      #let regular_column_gutter = 8pt
      
      #let h1 = 8mm
      #let link_padding = 6pt
      
      #import "house.typ": dotted, lined, rect_pattern, dotted_centered, rect_pattern_centered, padded_link, contents_bars, lead_pair, trail_heading, mos_frame, well_frame
      
      #let dotted = dotted(regular_height: regular_height)
      #let lined = lined(regular_height: regular_height, regular_stroke: regular_stroke)
      #let rect_pattern = rect_pattern.with(regular_height: regular_height)
      #let dotted_centered = dotted_centered(regular_height: regular_height)
      #let rect_pattern_centered = rect_pattern_centered.with(regular_height: regular_height)
      #let scratch_pad = rect_pattern(dotted)
      #let padded_link = padded_link.with(padding: link_padding)
      #let contents_bars = contents_bars.with(thick_stroke: thick_stroke)
      #let mos_frame = mos_frame.with(mos-width: 8mm, column-gutter: 1.5mm)
      #let well_frame = well_frame.with(heading-height: 8mm, row-gutter: 1.5mm)
    ''',
    'weekly': '''
      #mos_frame(
        left,
        rotate(
          270deg,
          origin: center + horizon,
          reflow: true,
      
          table(
            columns: (3fr, 1fr),
            rows: 1fr,
            inset: 0pt,
            column-gutter: regular_column_gutter,
            stroke: 0pt,
      
            table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell(fill: black, text(white)[#padded_link(<month-2026-01-01>)[Jan]])
      ),
      table(
        stroke: regular_stroke,
        columns: (1fr),
        rows: 1fr,
        align: horizon + center,
      
        table.cell([#padded_link(<quarter-2026-1>)[Q1]])
      )
          )
        ),
        well_frame(
          lead_pair(padded_link(<index>, contents_bars(size: h1)), text(size: h1)[Week 1 <2026W01> #h(0.6em) Dec 29 – Jan 4]),
          grid(
        columns: (1fr, 1fr, 1fr),
        rows: (1fr, 1fr, 1fr),
        column-gutter: 4pt,
      
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", [Monday 29])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", [Tuesday 30])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", [Wednesday 31])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ),
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", padded_link(<2026-01-01>)[Thursday 1])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", padded_link(<2026-01-02>)[Friday 2])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", padded_link(<2026-01-03>)[Saturday 3])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ),
        grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", padded_link(<2026-01-04>)[Sunday 4])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ), grid.cell(colspan: 2, grid(
        columns: 1fr,
        rows: (auto, 1fr),
        grid.cell(stroke: (bottom: regular_stroke + black), inset: (bottom: 0.25em), text(bottom-edge: "descender", [Notes])),
        box(width: 100%, height: 100%, clip: true, inset: (top: 0.25em, bottom: 0.25em), rect_pattern(dotted))
      ))
      ),
        ),
      )
    ''',
  })
# ---
